kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coursebotics
  labels:
    name: coursebotics
    app: coursebotics
