kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coursebotics-app
  namespace: coursebotics
  labels:
    app: coursebotics
    version: v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: coursebotics
  template:
    metadata:
      labels:
        app: coursebotics
        version: v1
    spec:
      serviceAccountName: coursebotics-sa
      containers:
        - name: coursebotics
          image: nilbhungaliya11/coursebotics:v2
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
          imagePullPolicy: Always
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
