kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coursebotics-service
  namespace: coursebotics
  labels:
    app: coursebotics
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
    nodePort: 30000
  selector:
    app: coursebotics
